signup/forms: fix helptext line-height being too small.
fixes #5575

--- a/meinberlin/assets/scss/styles_user_facing/_form.scss
+++ b/meinberlin/assets/scss/styles_user_facing/_form.scss
@@ -15,6 +15,7 @@ button {
 
 .formgroup__help {
   font-size: 14px;
+  line-height: 1.3;
 
   label + & {
     margin-top: -0.4em;
